force-app/main/default/objects/CC_Comunicaciones__c/CC_Comunicaciones__c.object-meta.xml
<CustomObject>
    <description>Entidad para poder guardar comunicaciones con el cliente, otp, sms, etc...</description>
    <label>Comunicaciones</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Comunicaciones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comunicaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>