force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_AuthorizationId__c.field-meta.xml
<CustomField>
    <fullName>CC_AuthorizationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthorizationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>