force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Case__c.field-meta.xml
<CustomField>
    <fullName>CC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Comunicaciones</relationshipName>
    <type>Lookup</type>
</CustomField>