force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comunicaciones</relationshipLabel>
    <relationshipName>Comunicaciones</relationshipName>
    <type>Lookup</type>
</CustomField>