force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Codigo_Error__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código error</label>
    <length>10</length>
    <type>Text</type>
</CustomField>