force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Codigo_OTPSMS__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_OTPSMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código OTPSMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>