force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Detalle__c.field-meta.xml
<CustomField>
    <fullName>CC_Detalle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle</label>
    <type>TextArea</type>
</CustomField>