force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Estado__c.field-meta.xml
<CustomField>
    <fullName>CC_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Cancelada por agente</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Denegado</fullName>
            </value>
            <value>
                <fullName>En progreso</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Expirado</fullName>
            </value>
            <value>
                <fullName>No autorizado</fullName>
            </value>
            <value>
                <fullName>OTP No recibida</fullName>
            </value>
            <value>
                <fullName>Pdte. Envío</fullName>
            </value>
            <value>
                <fullName>Pdte. Validar</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>