force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Fecha_Validacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Validacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de validación</label>
    <type>DateTime</type>
</CustomField>