force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Franja_Horaria__c.field-meta.xml
<CustomField>
    <fullName>CC_Franja_Horaria__c</fullName>
    <formula>IF(MINUTE(TIMEVALUE(CC_Fecha_Validacion__c)) &lt; 30, LPAD(TEXT(CC_FranjaHorariaAux__c), 2, &apos;0&apos;) &amp; &apos;:00 - &apos; &amp; LPAD(TEXT( CC_FranjaHorariaAux__c), 2, &apos;0&apos;) &amp; &apos;:30&apos;,
LPAD(TEXT( CC_FranjaHorariaAux__c ), 2, &apos;0&apos;) &amp; &apos;:30&apos; &amp; &apos; - &apos; &amp; LPAD(TEXT( CC_FranjaHorariaAux__c +1), 2, &apos;0&apos;)&amp;&apos;:00&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franja Horaria</label>
    <type>Text</type>
</CustomField>