force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_FranjaHorariaAux__c.field-meta.xml
<CustomField>
    <fullName>CC_FranjaHorariaAux__c</fullName>
    <formula>HOUR(TIMEVALUE(CC_Fecha_Validacion__c+1/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franja Horaria Aux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>