force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Intentos_Validacion_OTP__c.field-meta.xml
<CustomField>
    <fullName>CC_Intentos_Validacion_OTP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intentos validación OTP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>