force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Mensaje_Error__c.field-meta.xml
<CustomField>
    <fullName>CC_Mensaje_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensaje error</label>
    <type>TextArea</type>
</CustomField>