force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Nivel__c.field-meta.xml
<CustomField>
    <fullName>CC_Nivel__c</fullName>
    <label>Nivel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel 1</fullName>
            </value>
            <value>
                <fullName>Emergencia</fullName>
            </value>
            <value>
                <fullName>Nivel 2</fullName>
            </value>
            <value>
                <fullName>Cliente Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>