force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Origen__c.field-meta.xml
<CustomField>
    <fullName>CC_Origen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>