force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Perfil_empleado__c.field-meta.xml
<CustomField>
    <fullName>CC_Perfil_empleado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perfil del agente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>