force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Pregunta_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Pregunta_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pregunta 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>