force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Respuesta_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Respuesta 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>