force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Respuesta_OTP__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Respuesta OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>