force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Resultado_Validacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Resultado_Validacion__c</fullName>
    <label>Resultado validación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTP errónea</fullName>
            </value>
            <value>
                <fullName>OTP validada correctamente</fullName>
            </value>
            <value>
                <fullName>Identificación emergencia</fullName>
            </value>
            <value>
                <fullName>Identificación manual</fullName>
            </value>
            <value>
                <fullName>Identificación NOK</fullName>
            </value>
            <value>
                <fullName>OTP no recibida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>