force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Ticket__c.field-meta.xml
<CustomField>
    <fullName>CC_Ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>N.º Ticket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>