force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Tipo_Llamada__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Llamada__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo llamada</label>
    <length>30</length>
    <type>Text</type>
</CustomField>