force-app/main/default/objects/CC_Comunicaciones__c/fields/CC_Validacion_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Validacion_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validación 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>