force-app/main/default/objects/CC_Comunicaciones__c/fields/CSBD_EstadoFinal__c.field-meta.xml
<CustomField>
    <fullName>CSBD_EstadoFinal__c</fullName>
    <formula>OR (
   ISPICKVAL(CC_Estado__c,&apos;Rechazado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Error&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Cerrado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Expirado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Denegado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Aprobado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;No autorizado&apos;),
   ISPICKVAL(CC_Estado__c,&apos;Cancelada por agente&apos;),
   ISPICKVAL(CC_Estado__c,&apos;OTP No recibida&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finalizada</label>
    <type>Checkbox</type>
</CustomField>