force-app/main/default/objects/CC_Comunicaciones__c/recordTypes/CC_Bloqueo.recordType-meta.xml
<RecordType>
    <fullName>CC_Bloqueo</fullName>
    <active>true</active>
    <description>Para dejar traza de las veces que se bloqueo un cliente</description>
    <label>Cliente Bloqueado</label>
</RecordType>