force-app/main/default/objects/CC_Comunicaciones__c/recordTypes/CC_OTPSMS.recordType-meta.xml
<RecordType>
    <fullName>CC_OTPSMS</fullName>
    <active>true</active>
    <description>RecordType para crear un nuevo OTPSMS</description>
    <label>OTPSMS</label>
</RecordType>