force-app/main/default/objects/CC_Comunicaciones__c/recordTypes/CSBD_Autenticacion.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Autenticacion</fullName>
    <active>true</active>
    <label>Autenticación segura (CSBD)</label>
</RecordType>